--- a/warsztaty/projekt-do-poprawy/css/style.css
+++ b/warsztaty/projekt-do-poprawy/css/style.css
@@ -1,3 +1,71 @@
 body {
-    background-color: #221f1f
+    margin: 0px;
+    font-family: 'Lato', 'sans-serif';
+    
 }
+
+/*menu*/
+nav#menu {
+    text-align: center;
+    background-color: #2c2626; 
+    text-decoration: none;
+}
+
+nav#menu > ul {
+    margin: 0;
+}
+
+nav#menu > ul >li.menu-item {
+    display: inline-block; 
+    padding: 25px;
+    list-style: none;
+
+}
+
+nav#menu > ul >li.menu-item > a {
+    color: white;
+    text-decoration: none;
+}
+
+nav#menu > ul >li.menu-item > a:hover {
+    color: red;
+}
+
+
+/*header*/
+
+header#header {
+    position:relative;
+}
+
+header#header > img {
+    width: 100%;
+}
+
+header#header h1#main-header-text {
+    position: absolute;
+    top: 45%;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 50px;
+    left: 0;
+    right: 0;
+    margin:0 auto;
+    text-align: center;
+}
+
+section#about > h2#about-header {
+    text-align: center;
+
+}
+
+footer#contact > h2#contact-header {
+    text-align: center;
+    background-color: #2a2727;
+    color: #ffffff;     
+}
+
+footer#contact > h2#contact-content {
+    background-color: red; 
+} 
+
