--- a/warsztaty/galeria-do-poprawy/css/style.css
+++ b/warsztaty/galeria-do-poprawy/css/style.css
@@ -33,3 +33,16 @@ figure img{
 	width: 100%;
 	border: 2px solid #444;
 }
+
+@media all and (max-width: 900px){
+    .box{
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 480px) and (max-width: 600px) {
+    .box {
+        width:50%;
+    }
+}
+    
