--- a/warsztaty/galeria-do-poprawy/css/style.css
+++ b/warsztaty/galeria-do-poprawy/css/style.css
@@ -34,15 +34,39 @@ figure img{
 	border: 2px solid #444;
 }
 
-@media all and (max-width: 900px){
-    .box{
-        width: 50%;
+#gallery {
+    width: 80%;
+}
+
+figure {
+    width: 33%;
+}
+
+@media screen and (max-width: 480px) {
+    #gallery {
+        width: 100%;
+    }
+    figure {
+        width: 
+            100%;
     }
 }
 
-@media screen and (min-width: 480px) and (max-width: 600px) {
-    .box {
-        width:50%;
+@media screen and (min-width 769px) and (max-width: 992px) {
+    figure {
+        width: 49%;
     }
 }
+
+@media screen and (min-width: 993px) {
+    #gallery {
+        width: 90%;
+    }
+}
+
+
+
+
+
+
     
