--- a/zadanie-domowe/zadanie-2/css/responsive.css
+++ b/zadanie-domowe/zadanie-2/css/responsive.css
@@ -1,18 +1,23 @@
+/*------------MEDIA-------------*/
+
+
 @media all and (max-width: 1169px) {
     #main-header {
         background-image: url("../img/man-2.jpg");
         height: 70vh;
-        background-position: center center;
+        background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        color: black;
     }
 }
 
-div {
-    position: absolute;
-    font-size: 1.5vw;
-    top: 20%;
-    right: 5%;
+    div {
+        position: absolute;
+        font-size: 1.5vw;
+        top: 5%;
+        right: 5%;
+/*        color: white;*/
 }
 
 @media all and (max-width: 991px) {
@@ -22,14 +27,15 @@ div {
         background-repeat: no-repeat;
         background-size: cover;
         height: 50vh;
+        color: black;
     }
 }
 
-div {
-    position: relative;
-    top: 50vh;
-    font-size: 2vh;
-    text-align: center;
-    color: black;
-    padding: 30px 0px 0px 0px;
+    div {
+        position: relative;
+        top: 50vh;
+        font-size: 2vh;
+        text-align: center;
+        padding: 30px;
+/*        color: white;*/
 }
