--- a/warsztaty/portfolio/css/style.css
+++ b/warsztaty/portfolio/css/style.css
@@ -1,4 +1,4 @@
-/******* Style *******/
+/*******  GENERAL STYLE START*******/
 * {
     box-sizing: border-box;
 }
@@ -13,9 +13,14 @@ body {
     position: 100%;
 }
 
-/* General styles - end */
+h1, h2, h3, h4, h5, h6 {
+    text-align: center;
+}
 
-/****Navigation start******/
+/* ----------GENERAL STYLE END------- */
+
+/*-------NAVIGATION STYLE START--------*/
+
 nav#main-nav {
     width: 100%;
     position:fixed;
@@ -51,9 +56,9 @@ nav#main-nav > ul > li.menu-item{
 }
  
 
-/* Navigation end*/
+/*--------- NAVIGATION STYLE END-----*/
 
-/*Header start*/
+/*---------HEADER STYLE START---------*/
 
 #main-header {
     background-image: url("../img/header-background.jpg");
@@ -82,9 +87,9 @@ nav#main-nav > ul > li.menu-item{
     font-size: 2em;
 }
 
-/*header end*/
+/*-----------HEADER STYLE END--------*/
 
-/*About start*/
+/*----------ABOUT STYLE START----------*/
 #about {
     background-color: #f9fcfe;
     overflow: hidden;
@@ -113,6 +118,7 @@ nav#main-nav > ul > li.menu-item{
 #about > h2 {
     text-align: center;
     font-weight: 400;
+    
 }
 
 #about > h2 > span {
@@ -120,9 +126,33 @@ nav#main-nav > ul > li.menu-item{
     font-weight: 700; 
 }
 
-/*About end*/
+/*----------ABOUT STYLE END--------*/
 
 
+/*---------SKILLS STYLE START-----------*/
+
+#skills > h2 > span {
+    color: #1ac056;
+    font-weight: 700;
+} 
+
+#skills > p {
+    text-align: center;
+}
+
+#skills-icons > figure {
+    display: inline-block;
+}
+
+#skills-icons {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+    
+
+
+/*-------------SKILLS STYLE END---------*/
 
 
 
