--- a/Bootsrap/warsztat/css/style-1.css
+++ b/Bootsrap/warsztat/css/style-1.css
@@ -16,7 +16,7 @@ header#main-header {
 }
 
 #main-nav {
-    background-color: aqua;
+    background-color: #9ff4f4;
     opacity: 0.9;
 }
 
@@ -43,7 +43,8 @@ h3 {
     width: 50px;
     border: solid;
     border-radius: 50px;
-    color: aqua;
+    color: white;
+    background-color: aqua;
     position: relative;
     margin: 6px auto;
 }
@@ -53,11 +54,156 @@ h3 {
     left: 30%;
     top: 30%;
     margin: 0 auto;
-    
-    
+}
+
+#kwadrat .fa:hover {
+    transform: rotate(360deg);
+    transition: 0.5s;
 }
 /*servies END*/
 
+
+/****************portfolio**************/
+#container-portfolio {
+    width: auto;
+    background-color: #e6e0e0;
+    margin-bottom: 20px;
+}
+
+.portfolio-image {
+    margin-bottom: 30px;
+    background-size: cover;
+    height: 300px;
+}
+.background-image {
+    background-color: white;
+    height: 400px;
+    margin-bottom: 30px;
+}
+
+.portfolio-text {
+    position: absolute;
+    top: 320px;
+    margin-left: 50px;
+}
+
+#portfolio-image-1 {
+    background-image: url(../img/portfolio/box_of_cookies.jpg);
+}
+
+#portfolio-image-2 {
+    background-image: url(../img/portfolio/chaotic_paint.jpg);
+}
+
+#portfolio-image-3 {
+    background-image: url(../img/portfolio/chestnut_on_bracket.jpg);
+}
+#portfolio-image-4 {
+    background-image: url(../img/portfolio/child_with_blue_paint.jpg);
+}
+
+#portfolio-image-5 {
+    background-image: url(../img/portfolio/house_with_blue_doors.jpg);
+}
+
+#portfolio-image-6 {
+    background-image: url(../img/portfolio/typing_on_laptop.jpg);
+}
+
+/**********maska*********/
+
+.container .item .background-image .portfolio-image .portfolio-mask {
+    background-color: rgba(145, 168, 230, 0.8);
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transform: all 0.3s easy-in-out;
+    position: absolute;
+    font-size: initial;
+}
+
+.container .row .item .background-image .portfolio-image .portfolio-mask:hover {
+    opacity: 1;
+}
+
+.portfolio-image {
+    transition: all 1s ease;
+}
+
+.portfolio-image:hover {
+    transition: all 0.3s;
+    transform: scale(1.05);
+}
+
+.portfolio-mask {
+    color: white;
+    padding: 130px;
+    font-size: 
+}
+/**********maska END*********/
+/***************portfolio END*******************/
+
+/**************team**************/
+
+
+#team-image-1 {
+    background-image: url(../img/team/man-1.jpg);
+}
+#team-image-2 {
+    background-image: url(../img/team/man-2.jpg);
+}
+#team-image-3 {
+    background-image: url(../img/team/woman-1.jpg);
+}
+
+.team-image {
+    margin-bottom: 30px;
+    background-size: cover;
+    height: 250px;
+    width: 250px;
+    border-radius: 250px;
+    margin: 6px auto;
+}
+
+/************ICONS**************/
+.contact-icon .fa {
+    width: 70px;
+    height: 70px;
+    border-radius: 60px;
+    border: solid;
+    background-color: black;
+    color: white;
+    font-size: 40px;
+    
+}
+.contact-icon .fa:hover {
+    background-color: aqua;
+    color: white;
+    transition: 0.5s;
+}
+/************ICONS END**********/
+.container .team-text {
+    padding: 50px;
+    text-align: center;
+}
+/**************team END**************/
+
+/************contact form***************/
+#contact {
+    background-image: url(../img/footer/world-map.jpg);
+    color: white;
+}
+
+.section-content {
+    text-align: center;
+    
+}
+
+.btn {
+    
+}
+
+/************contact form END***************/
 
 
 
